--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<HTML>
+<HTML>
   <HEAD>
     <TITLE>CryptoPortfolioTracker</TITLE>
     <META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8" />
@@ -38,7 +38,7 @@ FONT.key {font-weight: bold; color: darkgreen}
 .DetailsStyle {margin-left:30px}
 .ItemStyle {margin-left:-15px; font-weight:bold}
 .StartColorStr {background-color:#4B3E1A}
-.JustThisApp A:link {font-weight:normal; color:#000066; text-decoration:underline}
+.JustThisApp A:link {font-weight:bold; color:#000066; text-decoration:underline}
 .JustThisApp A:visited {font-weight:normal; color:#000066; text-decoration:underline}
 .JustThisApp A:active {font-weight:normal; text-decoration:underline}
 .JustThisApp A:hover {font-weight:normal; color:#FF6600; text-decoration:underline}
@@ -59,15 +59,17 @@ FONT.key {font-weight: bold; color: darkgreen}
 <TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540"><TR><TD WIDTH="496">
 
 <!-- Begin AppInfo -->
-                                                                                           <TABLE><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>CryptoPortfolioTracker</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>1.0.0.0</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Publisher:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>MK-OSFT</TD></TR><tr><td colspan="3">&nbsp;</td></tr></TABLE>
+  <TABLE>
+    <TR><TD><TABLE><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>CryptoPortfolioTracker</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>1.0.0.0</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Publisher:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>MK-OSFT</TD></TR><tr><td colspan="3">&nbsp;</td></tr></TABLE></TD>
 <!-- End AppInfo -->
-
+      <TD WIDTH="120"><SPACER TYPE="block" WIDTH="10" /></TD><TD><img src="imageBTC.png" alt="Bitcoin"></TD>
+  </TABLE>
 
 <!-- Begin Prerequisites -->
-<TABLE ID="BootstrapperSection" BORDER="0"><TR><TD COLSPAN="2">The following prerequisites are required:</TD></TR><TR><TD WIDTH="10">&nbsp;</TD><TD><UL>
 </UL></TD></TR><TR><TD COLSPAN="2">
-If these components are already installed, you can <SPAN CLASS="JustThisApp"><A HREF="CryptoPortfolioTracker.application">launch</A></SPAN> the application now. Otherwise, click the button below to install the prerequisites and run the application.
+At the first installation you probably will get a message that you can't install the application referring to that the 'publishers certificate could not be verified...'. If so, follow the <SPAN CLASS="JustThisApp"><A HREF="file:///C:/Users/marce/source/repos/CryptoPortfolioTracker/Certificate_Installation.html"> Certificate Installation guide</A></SPAN> after you have downloaded the installation package.
 </TD></TR><TR><TD COLSPAN="2">&nbsp;</TD></TR></TABLE>
+<TABLE ID="BootstrapperSection" BORDER="0"><TR><TD COLSPAN="2">Click the Download button below to download and start the installation.</TD></TR><TR><TD WIDTH="10">&nbsp;</TD><TD><UL>
 <!-- End Prerequisites -->
 
 
@@ -85,7 +87,7 @@ If these components are already installed, you can <SPAN CLASS="JustThisApp"><A 
 
 <TR><TD>
 <!-- Begin Footer -->
-<TABLE WIDTH="100%" CELLPADDING="0" CELLSPACING="0" BORDER="0" BGCOLOR="#ffffff"><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD CLASS="FooterText" ALIGN="center"><A HREF="https://go.microsoft.com/fwlink/?linkid=2146276">ClickOnce Resources</A>
+<TABLE WIDTH="100%" CELLPADDING="0" CELLSPACING="0" BORDER="0" BGCOLOR="#ffffff"><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD CLASS="FooterText" ALIGN="center"><A HREF="file:///C:/Users/marce/source/repos/CryptoPortfolioTracker/Certificate_Installation.html">How to install the certificate</A>
 </TD></TR><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD HEIGHT="1" bgcolor="#cecece"><SPACER TYPE="block" HEIGHT="1" /></TD></TR></TABLE>
 <!-- End Footer -->
 </TD></TR>
