--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ FONT.key {font-weight: bold; color: darkgreen}
 
 <!-- Begin Prerequisites -->
 </UL></TD></TR><TR><TD COLSPAN="2">
-At the first installation you probably will get a message that you can't install the application referring to that the 'publishers certificate could not be verified...'. If so, follow the <SPAN CLASS="JustThisApp"><A HREF="file:///C:/Users/marce/source/repos/CryptoPortfolioTracker/Certificate_Installation.html"> Certificate Installation guide</A></SPAN> after you have downloaded the installation package.
+At the first installation you probably will get a message that you can't install the application referring to that the 'publishers certificate could not be verified...'. If so, follow the <SPAN CLASS="JustThisApp"><A HREF="Certificate_Installation.html"> Certificate Installation guide</A></SPAN> after you have downloaded the installation package.
 </TD></TR><TR><TD COLSPAN="2">&nbsp;</TD></TR></TABLE>
 <TABLE ID="BootstrapperSection" BORDER="0"><TR><TD COLSPAN="2">Click the Download button below to download and start the installation.</TD></TR><TR><TD WIDTH="10">&nbsp;</TD><TD><UL>
 <!-- End Prerequisites -->
@@ -87,7 +87,7 @@ At the first installation you probably will get a message that you can't install
 
 <TR><TD>
 <!-- Begin Footer -->
-<TABLE WIDTH="100%" CELLPADDING="0" CELLSPACING="0" BORDER="0" BGCOLOR="#ffffff"><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD CLASS="FooterText" ALIGN="center"><A HREF="file:///C:/Users/marce/source/repos/CryptoPortfolioTracker/Certificate_Installation.html">How to install the certificate</A>
+<TABLE WIDTH="100%" CELLPADDING="0" CELLSPACING="0" BORDER="0" BGCOLOR="#ffffff"><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD CLASS="FooterText" ALIGN="center"><A HREF="Certificate_Installation.html">How to install the certificate</A>
 </TD></TR><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD HEIGHT="1" bgcolor="#cecece"><SPACER TYPE="block" HEIGHT="1" /></TD></TR></TABLE>
 <!-- End Footer -->
 </TD></TR>
