--- a/index.html
+++ b/index.html
@@ -51,19 +51,24 @@ FONT.key {font-weight: bold; color: darkgreen}
     <TABLE WIDTH="100%" CELLPADDING="0" CELLSPACING="2" BORDER="0">
 
 <!-- Begin Banner -->
-<TR><TD><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" BGCOLOR="#cecece" WIDTH="100%"><TR><TD><TABLE BGCOLOR="#1c5280" WIDTH="100%" CELLPADDING="0" CELLSPACING="0" BORDER="0"><TR><TD CLASS="Banner" /></TR><TR><TD CLASS="Banner"><SPAN CLASS="BannerTextCompany" /></TD></TR><TR><TD CLASS="Banner"><SPAN CLASS="BannerTextApplication">CryptoPortfolioTracker</SPAN></TD></TR><TR><TD CLASS="Banner" ALIGN="RIGHT" /></TR></TABLE></TD></TR></TABLE></TD></TR>
+<TR><TD><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" BGCOLOR="#cecece" WIDTH="100%"><TR><TD><TABLE BGCOLOR="#1c5280" WIDTH="100%" CELLPADDING="0" CELLSPACING="0" BORDER="0"><TR><TD CLASS="Banner" /></TR><TR><TD CLASS="Banner"><SPAN CLASS="BannerTextCompany" /></TD></TR><TR><TD CLASS="Banner"><SPAN CLASS="BannerTextApplication">CryptoPortfolioTracker Desktop App</SPAN></TD></TR><TR><TD CLASS="Banner" ALIGN="RIGHT" /></TR></TABLE></TD></TR></TABLE></TD></TR>
 <!-- End Banner -->
-
 
 <!-- Begin Dialog -->
 <TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540"><TR><TD WIDTH="496">
 
 <!-- Begin AppInfo -->
   <TABLE>
-    <TR><TD><TABLE><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>CryptoPortfolioTracker</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>1.0.0.0</TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR><TR><TD><B>Publisher:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>MK-OSFT</TD></TR><tr><td colspan="3">&nbsp;</td></tr></TABLE></TD>
-<!-- End AppInfo -->
+    <TR><TD><TABLE><TR><TD COLSPAN="3">&nbsp;</TD></TR>
+              <TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>CryptoPortfolioTracker</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
+              <TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">1.0.0.0</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
+              <TR><TD><B>Required OS:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="3">Windows 10.0.17763.0</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
+              <TR><TD><B>Architecture:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">x64 (64-bit OS)</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
+              <TR><TD><B>Publisher:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">MK-OSFT</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
+            </TABLE></TD>
       <TD WIDTH="120"><SPACER TYPE="block" WIDTH="10" /></TD><TD><img src="imageBTC.png" alt="Bitcoin"></TD>
   </TABLE>
+<!-- End AppInfo -->
 
 <!-- Begin Prerequisites -->
 </UL></TD></TR><TR><TD COLSPAN="2">
@@ -75,7 +80,7 @@ At the first installation you probably will get a message that you can't install
 
 </TD></TR></TABLE>
 <!-- Begin Buttons -->
-<TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540" STYLE="cursor:hand" ONCLICK="window.navigate(InstallButton.href)"><TR><TD ALIGN="LEFT"><TABLE CELLPADDING="1" BGCOLOR="#333333" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#cecece" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#efefef" CELLSPACING="0" BORDER="0"><TR><TD WIDTH="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD><TD><A ID="InstallButton" <a href="https://marcel-osft.github.io/CryptoPortfolioTracker//CryptoPortfolioTracker_1.0.13.0_x64.msix" >Download</a></TD><TD width="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD></TR></TABLE></TD></TR></TABLE></TD></TR></TABLE></TD><TD WIDTH="15%" ALIGN="right" /></TR></TABLE></TD></TR>
+<TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540" STYLE="cursor:hand" ONCLICK="window.navigate(InstallButton.href)"><TR><TD ALIGN="LEFT"><TABLE CELLPADDING="1" BGCOLOR="#333333" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#cecece" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#efefef" CELLSPACING="0" BORDER="0"><TR><TD WIDTH="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD><TD><A ID="InstallButton" <a href="ms-appinstaller:?source=https://https://marcel-osft.github.io/CryptoPortfolioTracker//CryptoPortfolioTracker_1.0.13.0_x64.msix" >Download</a></TD><TD width="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD></TR></TABLE></TD></TR></TABLE></TD></TR></TABLE></TD><TD WIDTH="15%" ALIGN="right" /></TR></TABLE></TD></TR>
 <!-- End Buttons -->
 </TD></TR>
 <!-- End Dialog -->
