--- a/index.html
+++ b/index.html
@@ -70,17 +70,12 @@ FONT.key {font-weight: bold; color: darkgreen}
   </TABLE>
 <!-- End AppInfo -->
 
-<!-- Begin Prerequisites -->
-</UL></TD></TR><TR><TD COLSPAN="2">
-At the first installation you probably will get a message that you can't install the application referring to that the 'publishers certificate could not be verified...'. If so, follow the <SPAN CLASS="JustThisApp"><A HREF="Certificate_Installation.html"> Certificate Installation guide</A></SPAN> after you have downloaded the installation package.
-</TD></TR><TR><TD COLSPAN="2">&nbsp;</TD></TR></TABLE>
-<TABLE ID="BootstrapperSection" BORDER="0"><TR><TD COLSPAN="2">Click the Download button below to download and start the installation.</TD></TR><TR><TD WIDTH="10">&nbsp;</TD><TD><UL>
-<!-- End Prerequisites -->
+
 
 
 </TD></TR></TABLE>
 <!-- Begin Buttons -->
-<TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540" STYLE="cursor:hand" ONCLICK="window.navigate(InstallButton.href)"><TR><TD ALIGN="LEFT"><TABLE CELLPADDING="1" BGCOLOR="#333333" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#cecece" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#efefef" CELLSPACING="0" BORDER="0"><TR><TD WIDTH="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD><TD><A ID="InstallButton" <a href="https://marcel-osft.github.io/CryptoPortfolioTracker//CryptoPortfolioTracker_1.0.0.0_x64.msix" >Download</a></TD><TD width="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD></TR></TABLE></TD></TR></TABLE></TD></TR></TABLE></TD><TD WIDTH="15%" ALIGN="right" /></TR></TABLE></TD></TR>
+<TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540" STYLE="cursor:hand" ONCLICK="window.navigate(InstallButton.href)"><TR><TD ALIGN="LEFT"><TABLE CELLPADDING="1" BGCOLOR="#333333" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#cecece" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#efefef" CELLSPACING="0" BORDER="0"><TR><TD WIDTH="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD><TD><A ID="InstallButton" <a href="https://marcel-osft.github.io/CryptoPortfolioTracker//CryptoPortfolioTracker_setup.exe" >Download</a></TD><TD width="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD></TR></TABLE></TD></TR></TABLE></TD></TR></TABLE></TD><TD WIDTH="15%" ALIGN="right" /></TR></TABLE></TD></TR>
 <!-- End Buttons -->
 </TD></TR>
 <!-- End Dialog -->
@@ -91,10 +86,7 @@ At the first installation you probably will get a message that you can't install
 <TR><TD>&nbsp;</TD></TR>
 
 <TR><TD>
-<!-- Begin Footer -->
-<TABLE WIDTH="100%" CELLPADDING="0" CELLSPACING="0" BORDER="0" BGCOLOR="#ffffff"><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD CLASS="FooterText" ALIGN="center"><A HREF="Certificate_Installation.html">How to install the certificate</A>
-</TD></TR><TR><TD HEIGHT="5"><SPACER TYPE="block" HEIGHT="5" /></TD></TR><TR><TD HEIGHT="1" bgcolor="#cecece"><SPACER TYPE="block" HEIGHT="1" /></TD></TR></TABLE>
-<!-- End Footer -->
+
 </TD></TR>
 
 </TABLE>
