--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <STYLE TYPE="text/css">
 <!--
 BODY{margin-top:20px; margin-left:20px; margin-right:20px; color:#000000; font-family:Tahoma; background-color:white}
-A:link {font-weight:normal; color:#000066; text-decoration:none}
-A:visited {font-weight:normal; color:#000066; text-decoration:none}
+A:link {font-weight:normal; color:black; text-decoration:none}
+A:visited {font-weight:normal; color:white; text-decoration:none}
 A:active {font-weight:normal; text-decoration:none}
-A:hover {font-weight:normal; color:#FF6600; text-decoration:none}
+A:hover {font-weight:normal; color:white; text-decoration:none}
 P {margin-top:0px; margin-bottom:12px; color:#000000; font-family:Tahoma}
 PRE {border-right:#f0f0e0 1px solid; padding-right:5px; border-top:#f0f0e0 1px solid; margin-top:-5px; padding-left:5px; font-size:x-small; padding-bottom:5px; border-left:#f0f0e0 1px solid; padding-top:5px; border-bottom:#f0f0e0 1px solid; font-family:Courier New; background-color:#e5e5cc}
 TD {font-size:12px; color:#000000; font-family:Tahoma}
@@ -42,7 +42,19 @@ FONT.key {font-weight: bold; color: darkgreen}
 .JustThisApp A:visited {font-weight:normal; color:#000066; text-decoration:underline}
 .JustThisApp A:active {font-weight:normal; text-decoration:underline}
 .JustThisApp A:hover {font-weight:normal; color:#FF6600; text-decoration:underline}
--->
+        .btn {
+            background-color: DodgerBlue;
+            border: none;
+            color: white;
+            padding: 12px 30px;
+            cursor: pointer;
+            font-size: 20px;
+        }
+
+            /* Darker background on mouse-over */
+            .btn:hover {
+                background-color: RoyalBlue;
+                -->
 
 </STYLE>
 
@@ -55,35 +67,48 @@ FONT.key {font-weight: bold; color: darkgreen}
 <!-- End Banner -->
 
 <!-- Begin Dialog -->
-<TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540"><TR><TD WIDTH="496">
+<TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540"><TR>
+	<TD WIDTH="496">
 
-<!-- Begin AppInfo -->
-  <TABLE>
-    <TR><TD><TABLE><TR><TD COLSPAN="3">&nbsp;</TD></TR>
-              <TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>CryptoPortfolioTracker</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
-              <TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">1.0.1.0</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
-              <TR><TD><B>Required OS:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="3">Windows 10.0.17763.0</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
-              <TR><TD><B>Architecture:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">x64 (64-bit OS)</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
-              <TR><TD><B>Publisher:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">MK-OSFT</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10"/></TD></TR><TR><TD COLSPAN="3">&nbsp;</TD></TR>
-            </TABLE></TD>
-      <TD WIDTH="120"><SPACER TYPE="block" WIDTH="10" /></TD><TD><img src="imageBTC.png" alt="Bitcoin"></TD>
-  </TABLE>
-<!-- End AppInfo -->
-<h1>Attention: </h1>
-    <p class=MsoNormal><B>Microsoft Defender SmartScreen</B> might popup when starting the installation of the app. This because the app is not distributed through their App Store. Just click on 'More Info' to get the 'Run Anyway' button and proceed with the installation!</p>
+		<!-- Begin AppInfo -->
+		<TABLE>
+			<TR>
+				<TD>
+					<TABLE>
+						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
+						<TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>CryptoPortfolioTracker</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
+						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
+						<TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">1.0.1.0</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
+						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
+						<TR><TD><B>Required OS:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="3">Windows 10.0.17763.0</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
+						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
+						<TR><TD><B>Architecture:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">x64 (64-bit OS)</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
+						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
+						<TR><TD><B>Publisher:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">MK-OSFT</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
+						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
+					</TABLE>
+				</TD>
+				<TD WIDTH="120"><SPACER TYPE="block" WIDTH="10" /></TD>
+				<TD><img src="imageBTC.png" alt="Bitcoin"></TD>
+		</TABLE>
+		<!-- End AppInfo -->
+		<h1>Attention: </h1>
+		<p class=MsoNormal><B>Microsoft Defender SmartScreen</B> might popup when starting the installation of the app. This because the app is not distributed through their App Store. Just click on 'More Info' to get the 'Run Anyway' button and proceed with the installation!</p>
+
+
+		<!-- Add icon library -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<!-- Auto width -->
+		<button class="btn" ONCLICK="window.navigate(https://marcel-osft.github.io/CryptoPortfolioTracker//CryptoPortfolioTracker_setup.exe)">
+			<A ID="InstallButton" <a href="https://marcel-osft.github.io/CryptoPortfolioTracker//CryptoPortfolioTracker_setup.exe" ><i class="fa fa-download"></i> Download</a>
+	</TD>
+	</button>
 
 
 
-</TD></TR></TABLE>
-<!-- Begin Buttons -->
-<TR><TD ALIGN="LEFT"><TABLE CELLPADDING="2" CELLSPACING="0" BORDER="0" WIDTH="540" STYLE="cursor:hand" ONCLICK="window.navigate(InstallButton.href)"><TR><TD ALIGN="LEFT"><TABLE CELLPADDING="1" BGCOLOR="#333333" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#cecece" CELLSPACING="0" BORDER="0"><TR><TD><TABLE CELLPADDING="1" BGCOLOR="#efefef" CELLSPACING="0" BORDER="0"><TR><TD WIDTH="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD><TD><A ID="InstallButton" <a href="https://marcel-osft.github.io/CryptoPortfolioTracker//CryptoPortfolioTracker_setup_v1-0-1-0.exe" >Download</a></TD><TD width="20"><SPACER TYPE="block" WIDTH="20" HEIGHT="1" /></TD></TR></TABLE></TD></TR></TABLE></TD></TR></TABLE></TD><TD WIDTH="15%" ALIGN="right" /></TR></TABLE></TD></TR>
-<!-- End Buttons -->
-</TD></TR>
-<!-- End Dialog -->
 
-
-
-<!-- Spacer Row -->
+	<!-- Spacer Row -->
 <TR><TD>&nbsp;</TD></TR>
 
 <TR><TD>
