--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@ FONT.key {font-weight: bold; color: darkgreen}
 						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
 						<TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">1.0.1.0</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
 						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
+						<TR><TD><B>Languages:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="3">English; Dutch</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
+						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
 						<TR><TD><B>Required OS:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="3">Windows 10.0.17763.0</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
 						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
 						<TR><TD><B>Architecture:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">x64 (64-bit OS)</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
