--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ FONT.key {font-weight: bold; color: darkgreen}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Auto width -->
-		<button class="btn" ONCLICK="window.navigate(https://marcel-osft.github.io/CryptoPortfolioTracker/CryptoPortfolioTracker_setup_v1-1-0-1.exe)">
-			<A ID="InstallButton" <a href="https://marcel-osft.github.io/CryptoPortfolioTracker/CryptoPortfolioTracker_setup_v1-1-0-1.exe" ><i class="fa fa-download"></i> Download</a>
+		<button class="btn" ONCLICK="window.navigate(https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127921&authkey=!AB0Qpuk4rmLzyVo)">
+			<A ID="InstallButton" <a href="https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127921&authkey=!AB0Qpuk4rmLzyVo" ><i class="fa fa-download"></i> Download</a>
 	</TD>
 	</button>
 
