--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ FONT.key {font-weight: bold; color: darkgreen}
 						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
 						<TR><TD><B>Name:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD>CryptoPortfolioTracker</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
 						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
-						<TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">1.1.0.2</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
+						<TR><TD><B>Version:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="2">1.1.0.3</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
 						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
 						<TR><TD><B>Languages:</B></TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD><TD COLSPAN="3">English; Nederlands</TD><TD WIDTH="5"><SPACER TYPE="block" WIDTH="10" /></TD></TR>
 						<TR><TD COLSPAN="3">&nbsp;</TD></TR>
@@ -102,12 +102,12 @@ FONT.key {font-weight: bold; color: darkgreen}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Auto width -->
-		<button class="btn" ONCLICK="window.navigate(https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127926&authkey=!AOcdbnVkkfhfaOU)">
-			<A ID="InstallButton" <a href="https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127926&authkey=!AOcdbnVkkfhfaOU" ><i class="fa fa-download"></i> Download</a>
+		<button class="btn" ONCLICK="window.navigate(https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127927&authkey=!AM_R8iEXA8Jzr7A)">
+			<A ID="InstallButton" <a href="https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127927&authkey=!AM_R8iEXA8Jzr7A" ><i class="fa fa-download"></i> Download</a>
 	</TD>
 	</button>
 
-	
+	https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127927&authkey=!AM_R8iEXA8Jzr7A
 
 
 	<!-- Spacer Row -->
