--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ FONT.key {font-weight: bold; color: darkgreen}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Auto width -->
-		<button class="btn" ONCLICK="window.navigate(https://onedrive.live.com/embed?resid=A56E22F34D5BE226%2127928&authkey=!AJBeaxbGPuwRaP4)">
-			<A ID="InstallButton" <a href="https://onedrive.live.com/embed?resid=A56E22F34D5BE226%2127928&authkey=!AJBeaxbGPuwRaP4" ><i class="fa fa-download"></i> Download</a>
+		<button class="btn" ONCLICK="window.navigate(https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127929&authkey=!AF9LtjbPq4FmfG8)">
+			<A ID="InstallButton" <a href="https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127929&authkey=!AF9LtjbPq4FmfG8" ><i class="fa fa-download"></i> Download</a>
 	</TD>
 	</button>
 
