--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@ FONT.key {font-weight: bold; color: darkgreen}
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Auto width -->
-		<button class="btn" ONCLICK="window.navigate(https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127937&authkey=!AOnzfLa6euJNvkk)">
-			<A ID="InstallButton" <a href="https://onedrive.live.com/download?resid=A56E22F34D5BE226%2127937&authkey=!AOnzfLa6euJNvkk" ><i class="fa fa-download"></i> Download</a>
+		<button class="btn" ONCLICK="window.navigate(https://github.com/Marcel-OSFT/CryptoPortfolioTracker/releases/download/v1.1.0.4/CryptoPortfolioTracker_setup_v1-1-0-4.exe)">
+			<A ID="InstallButton" <a href="https://github.com/Marcel-OSFT/CryptoPortfolioTracker/releases/download/v1.1.0.4/CryptoPortfolioTracker_setup_v1-1-0-4.exe" ><i class="fa fa-download"></i> Download</a>
 	</TD>
 	</button>
 
